@@ -294,11 +294,6 @@
           <forkCount>1</forkCount>
           <reuseForks>true</reuseForks>
           <runOrder>alphabetical</runOrder>
-          <argLine>
-            --add-opens=java.base/java.lang=ALL-UNNAMED
-            --add-opens=java.base/java.util=ALL-UNNAMED
-            -Djdk.attach.allowAttachSelf
-          </argLine>
         </configuration>
       </plugin>
       <plugin>
